--- a/src/pages/waitlist.astro
+++ b/src/pages/waitlist.astro
@@ -1,14 +1,75 @@
 ---
-import MasterLayout from "../layouts/MasterLayout.astro";
+import DefaultPageLayout from "../layouts/DefaultPageLayout.astro";
 ---
 
-<MasterLayout title="Waitlist" description="Join the waitlist for Petapetual!">
-    <iframe
+<DefaultPageLayout
+    title="Waitlist"
+    description="Join the waitlist for Petapetual!"
+>
+    <div class="relative">
+        <div
+            id="spinner-container"
+            class="absolute top-24 w-full h-full text-center opacity-50 flex flex-col gap-2 items-center justify-center"
+        >
+            <i class="fas fa-circle-notch fa-spin fa-8x"></i>
+            <div class="">Loading...</div>
+        </div>
+        <iframe
+            id="form-iframe"
+            data-tally-src="https://tally.so/embed/A7Px7y?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1"
+            loading="lazy"
+            width="100%"
+            height="100"
+            frameborder="0"
+            marginheight="0"
+            marginwidth="0"
+            title="Join the Waitlist"></iframe>
+    </div>
+
+    <!-- <iframe
         src="https://app.youform.com/forms/x5nmc0la"
         loading="lazy"
         width="100%"
         height="700"
         frameborder="0"
         marginheight="0"
-        marginwidth="0"></iframe>
-</MasterLayout>
+        marginwidth="0"></iframe> -->
+</DefaultPageLayout>
+
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        const iframe = document.getElementById("form-iframe");
+        const spinner = document.getElementById("spinner-container");
+
+        // Show the spinner initially (this is done by the CSS above)
+
+        // Attach an event listener to the iframe's load event
+        iframe.addEventListener("load", function () {
+            // When the iframe content is loaded, hide the spinner
+            spinner.style.display = "none";
+        });
+
+        // Optional: If you want to handle the spinner when setting the src dynamically
+        // iframe.src = 'new-form-url.html';
+        // spinner.style.display = 'flex'; // Show spinner again before setting new src
+    });
+</script>
+
+<script>
+    var d = document,
+        w = "https://tally.so/widgets/embed.js",
+        v = function () {
+            "undefined" != typeof Tally
+                ? Tally.loadEmbeds()
+                : d
+                      .querySelectorAll("iframe[data-tally-src]:not([src])")
+                      .forEach(function (e) {
+                          e.src = e.dataset.tallySrc;
+                      });
+        };
+    if ("undefined" != typeof Tally) v();
+    else if (d.querySelector('script[src="' + w + '"]') == null) {
+        var s = d.createElement("script");
+        ((s.src = w), (s.onload = v), (s.onerror = v), d.body.appendChild(s));
+    }
+</script>
