Fix link to roadmap

--- a/src/pages/pricing.astro
+++ b/src/pages/pricing.astro
@@ -28,7 +28,8 @@ import Petapetual from "../components/Petapetual.astro";
             >
                 <Petapetual /> is still under active development, and so not all
                 of the features listed here may be fully finished and available.
-                Please consult the <a href="roadmap" class="blueLink">roadmap</a
+                Please consult the <a href="/roadmap" class="blueLink"
+                    >roadmap</a
                 > for more details.
             </div>
 
