Standardize spelling of honour

--- a/src/pages/examples/friends.astro
+++ b/src/pages/examples/friends.astro
@@ -6,7 +6,7 @@ import { Image } from "astro:assets";
 
 <DefaultPageLayout
     title="Late Friends"
-    description="Losing a close friend is a unique pain. Learn how to pay respects & honor their memory. Petapetual offers a peaceful space to build a lasting online tribute for your chosen family."
+    description="Losing a close friend is a unique pain. Learn how to pay respects & honour their memory. Petapetual offers a peaceful space to build a lasting online tribute for your chosen family."
 >
     <Image
         src="https://images.unsplash.com/photo-1506869640319-fe1a24fd76dc?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=2070"
@@ -28,7 +28,7 @@ import { Image } from "astro:assets";
 
     <p>
         In the midst of that sadness, a powerful need emerges: the desire to
-        honor them. We want to celebrate who they were, not just mourn their
+        honour them. We want to celebrate who they were, not just mourn their
         passing. You feel the pull to gather the photos, the shared memories,
         and the funny stories that perfectly capture their unique spirit. It’s a
         way to pay respects to the incredible life they lived and the special
