--- a/src/pages/examples/learn-culture.astro
+++ b/src/pages/examples/learn-culture.astro
@@ -6,7 +6,7 @@ import { Image } from "astro:assets";
 
 <DefaultPageLayout
     title="For Forgotten Culture"
-    description="In the modern world, many traditional rites and practices are starting to be forgotten. If you are unsure as to what traditions you can observe to honor the dearly deceased, Petapetual has got you covered."
+    description="In the modern world, many traditional rites and practices are starting to be forgotten. If you are unsure as to what traditions you can observe to honour the dearly deceased, Petapetual has got you covered."
 >
     <Image
         src="https://images.unsplash.com/photo-1641644239376-52e9952a43a6?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=1674"
@@ -23,7 +23,7 @@ import { Image } from "astro:assets";
     <p>
         As the world becomes more and more modern, many traditional rites and
         practices are slowly being forgotten. If you are someone who wants to
-        honor the dearly departed in line with tradition, it can be confusing
+        honour the dearly departed in line with tradition, it can be confusing
         and difficult to know what to do, what prayers to say, and what
         offerings to give (if at all).
     </p>
