--- a/src/pages/examples/pets.astro
+++ b/src/pages/examples/pets.astro
@@ -6,7 +6,7 @@ import { Image } from "astro:assets";
 
 <DefaultPageLayout
     title="Late Pets"
-    description="osing a pet is losing a family member. Learn how to cope with the grief and honor their memory. Petapetual offers a beautiful online pet memorial to celebrate their life."
+    description="osing a pet is losing a family member. Learn how to cope with the grief and honour their memory. Petapetual offers a beautiful online pet memorial to celebrate their life."
 >
     <Image
         src="https://images.unsplash.com/photo-1450778869180-41d0601e046e?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=2186"
@@ -30,7 +30,7 @@ import { Image } from "astro:assets";
 
     <p>
         This grief is real and it is deep. Because the bond we share with them
-        is so special, we feel a powerful need to honor their memory when
+        is so special, we feel a powerful need to honour their memory when
         they're gone. We want to celebrate the joy, laughter, and comfort they
         brought into our lives. We find ourselves looking through old photos,
         remembering their funny quirks, and wanting a way to pay respects to the
@@ -49,7 +49,7 @@ import { Image } from "astro:assets";
         where you can build a heartfelt tribute to your beloved companion. It’s
         a place to share your favorite photos, write down those sweet or funny
         stories, and create a permanent celebration of the life you shared. It
-        gives you a special place to visit, remember, and honor the
+        gives you a special place to visit, remember, and honour the
         unconditional love they gave.
     </p>
 </DefaultPageLayout>
