--- a/src/pages/how-it-works/online-memorials.astro
+++ b/src/pages/how-it-works/online-memorials.astro
@@ -40,7 +40,7 @@ import Petapetual from "../../components/Petapetual.astro";
                 class="blueLink">prayer streams</a
             > and <a href="/how-it-works/tributes" class="blueLink"
                 >memorial tributes</a
-            >, which you can use to further honor your late loved ones.
+            >, which you can use to further honour your late loved ones.
         </p>
     </section>
 
@@ -53,7 +53,7 @@ import Petapetual from "../../components/Petapetual.astro";
             Include your friends and family and bring warmth to your memorials.
             Once your memorial is set up, invite other <Petapetual /> users to view
             it, write loving messages in the guestbook, and place their own tributes
-            to honor the deceased.
+            to honour the deceased.
         </p>
     </section>
 
