--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -59,7 +59,7 @@ import MemorialTributesMockup from "../assets/img/mockup-memorial-tributes.png";
                 <h2 class="text-xl col-start-1">
                     Use our <a
                         href="/how-it-works/online-memorials"
-                        class="blueLink">digital memorial services</a
+                        class="blueLink">online memorial services</a
                     > to honour and pay respects to your late loved ones anytime,
                     anywhere.
                 </h2>
@@ -91,7 +91,7 @@ import MemorialTributesMockup from "../assets/img/mockup-memorial-tributes.png";
                             class="blueLink">prayer stream</a
                         > and <a href="/how-it-works/tributes" class="blueLink"
                             >tribute</a
-                        > services to decorate and honor your memorials, even when
+                        > services to decorate and honour your memorials, even when
                         you're away.
                     </p>
                     <p class="text-lg">
