--- a/src/components/pricing_table/BasicTier.astro
+++ b/src/components/pricing_table/BasicTier.astro
@@ -4,7 +4,7 @@ import PricingTableEntry from "./PricingTableEntry.astro";
 
 <PricingTableEntry
     name="Basic"
-    desc="For single memorials with the base Petapetual experience."
+    desc="For single memorials, and the basic experience."
     monthlyPrice="9.99"
     annualMonthlyPrice="9.00"
     baseColor="sky"
