--- a/src/pages/examples/relatives.astro
+++ b/src/pages/examples/relatives.astro
@@ -21,8 +21,8 @@ import { Image } from "astro:assets";
     </h1>
 
     <p>
-        There’s truly no easy way to navigate the loss of a family member. It’s
-        a deeply personal, profound, and tremendously emotional experience that
+        There’s truly no easy way to navigate the loss of family members. It’s a
+        deeply personal, profound, and tremendously emotional experience that
         can leave you feeling adrift. The world feels quieter, and the space
         they once filled feels impossibly large.
     </p>
