--- a/src/pages/examples/too-busy.astro
+++ b/src/pages/examples/too-busy.astro
@@ -22,9 +22,9 @@ import { Image } from "astro:assets";
         Today's world is one that constantly demands your attention. From
         studies, to work, to social commitments; it can be very hard to strike
         the balance between building and living your own life, and making the
-        time to remember those that have passed on. Whilst <i
+        time to remember those who have passed on. Whilst <i
             >nothing beats showing up and paying respects in person</i
-        >, we built <Petapetual /> to try and make remeberance a little bit easier
+        >, we built <Petapetual /> to try and make rememberance a little bit easier
         in the modern age.
     </p>
 
