--- a/src/pages/how-it-works/family-trees.astro
+++ b/src/pages/how-it-works/family-trees.astro
@@ -15,10 +15,10 @@ import DemoFamilyTree from "../../components/DemoFamilyTree.astro";
                 The <a href="/how-it-works/online-memorials" class="blueLink"
                     >online memorials</a
                 >
-                on <Petapetual /> can be linked together to form family trees. This
-                allows you to group your memorials and display the relationships
-                between your late loved ones. Document and trace your legacy today,
-                to share it with the generations of tomorrow.
+                on <Petapetual /> can be linked to form family trees. This allows
+                you to group your memorials and display the relationships between
+                your late loved ones. Document and trace your legacy today, to share
+                it with the generations of tomorrow.
             </p>
         </section>
 
