--- a/src/pages/how-it-works/index.astro
+++ b/src/pages/how-it-works/index.astro
@@ -17,7 +17,7 @@ import TributeWidget from "../../components/TributeWidget.astro";
             <h1 class="text-2xl font-semibold">How it works</h1>
 
             <p>
-                Petapetual is more than just a simple page for your late loved
+                <Petapetual /> is more than just a simple page for your late loved
                 ones. We offer many value-added services to help you honour your
                 dearly departed, and it's very straightforward to get started:
             </p>
@@ -43,9 +43,9 @@ import TributeWidget from "../../components/TributeWidget.astro";
                 </Step>
 
                 <Step index="4" title="Use our value-added services">
-                    Place tributes at your memorial, get reminders on special /
-                    significant dates, suggestions for specially tailored
-                    articles, and much more.
+                    Place tributes at your memorial, get reminders on
+                    special/significant dates, suggestions for specially
+                    tailored articles, and much more.
                 </Step>
             </div>
 
@@ -82,16 +82,16 @@ import TributeWidget from "../../components/TributeWidget.astro";
 
             <p>
                 A memorial is a single page you create for your late loved one.
-                They are the bread and butter of the <Petapetual /> experience and
-                most of the value of our platform unlocks after you have created
-                one. You can create multiple memorials depending on the plan you
-                have purchased.
+                It is the bread and butter of the <Petapetual /> experience and most
+                of the value of our platform unlocks after you have created one.
+                You can create multiple memorials depending on the plan you have
+                purchased.
             </p>
 
             <p>
                 You will be able to upload a photo and populate details such as
-                their name, date of birth, date of passing, and even a short
-                epitaph to display.
+                the deceased's name, date of birth, date of passing, and even a
+                short epitaph to display.
             </p>
 
             <p>
@@ -192,7 +192,8 @@ import TributeWidget from "../../components/TributeWidget.astro";
             <p>
                 <i>Family trees</i> are a way to group and categorize your memorials
                 on <Petapetual />. If you have more than one memorial, you can
-                link them together and specify relationships between them.
+                link them, specify the relationships between them, and visualize
+                them in a tree.
             </p>
 
             <p
