--- a/src/pages/how-it-works/online-memorials.astro
+++ b/src/pages/how-it-works/online-memorials.astro
@@ -12,7 +12,7 @@ import Petapetual from "../../components/Petapetual.astro";
     <p>
         The online memorial is the core of the <Petapetual /> experience. More than
         just a static website for your loved ones, it's your own portable, accessible
-        monument to those that have passed away. Never feel too far away from them
+        monument to those who have passed away. Never feel too far away from them
         again.
     </p>
 
@@ -25,7 +25,7 @@ import Petapetual from "../../components/Petapetual.astro";
             Access your memorial from any device, anywhere in the world, anytime
             you want. No need to travel to the cemetery, no need to wait for
             columbarium opening times, no app installation required. Mobile,
-            tablet, desktop, we've got you covered.
+            tablet, desktop: we've got you covered.
         </p>
     </section>
 
@@ -66,13 +66,13 @@ import Petapetual from "../../components/Petapetual.astro";
         <p>
             Your memorials are not publicly accessible unless you want them to
             be. Pay your respects in private, or with a select group of close
-            individuals that you have invited.
+            individuals whom you have invited.
         </p>
 
         <p>
             If you opt-in for a public memorial, anyone can view your memorial
             without an account. They will not be able to post in the guestbook,
-            nor will they be able toplace tributes.
+            nor will they be able to place tributes.
         </p>
     </section>
 </DefaultPageLayout>
