--- a/src/pages/how-it-works/prayer-streams.astro
+++ b/src/pages/how-it-works/prayer-streams.astro
@@ -11,11 +11,11 @@ import PrayerStreamWidget from "../../components/PrayerStreamWidget.astro";
     <h1 class="text-2xl font-semibold">Prayer Streams</h1>
 
     <p>
-        Inspired by the electric prayer chanting boxes used in Asia, spinning
-        Tibetan prayer wheels, and the practice of temples around the world to
-        play pre-recorded mantras, prayer streams are <Petapetual />'s way to
-        virtualize and automate prayers so that they can be used to serve your
-        memorials.
+        Inspired by the electric prayer chanting boxes used in Asia, hymns,
+        religious songs, spinning Tibetan prayer wheels, and the practice of
+        places of worship around the world to play pre-recorded songs and
+        mantras, prayer streams are <Petapetual />'s way to virtualize and
+        automate prayers so that they can be used to serve your memorials.
     </p>
 
     <p>
