--- a/src/pages/how-it-works/tributes.astro
+++ b/src/pages/how-it-works/tributes.astro
@@ -70,7 +70,7 @@ import TributeWidget from "../../components/TributeWidget.astro";
     <p>
         When you purchase and assign a tribute to a memorial, the service takes
         effect, and the tribute is shown on the memorial page. Any other <Petapetual
-        /> user that you invite to your memorials will be able to place a tribute.
+        /> user whom you invite to your memorials will be able to place a tribute.
     </p>
 
     <div
@@ -132,25 +132,23 @@ import TributeWidget from "../../components/TributeWidget.astro";
 
     <p>
         Aside from the religious and cultural backgrounds they are from,
-        tributes can be separated into two categories: <a
-            class="italic blueLink"
-            href="#cosmetic">cosmetic</a
-        > and <a class="italic blueLink" href="#active">active</a>.
+        tributes can be separated into two categories: <i>cosmetic</i> and
+        <i>active</i>, described below.
     </p>
 
     <h3 id="cosmetic" class="text-lg font-semibold">Cosmetic Tributes</h3>
     <p>
-        These tributes are decorative, and have no other use other than being
-        displayed on the memorial, and as a sign that you have paid your
-        respects. They are the equivalent to placing flowers or other adornments
-        at your loved one's final resting place.
+        These tributes are decorative, and are displayed on the memorial, as a
+        sign that you have paid your respects. They are the equivalent to
+        placing flowers or other adornments at your loved one's final resting
+        place.
     </p>
 
     <h3 id="active" class="text-lg font-semibold">Active Tributes</h3>
     <p>
         These tributes are both decorative <i>and</i> functional. They are all associated
         with a service we provide for you. For example, you can purchase an active
-        tribute to say prayers or blessings for your memorial 24/7, as a supplementary
+        tribute to say prayers or blessings for your memorial 24/7 as a supplementary
         <a class="blueLink" href="/how-it-works/prayer-streams">prayer stream</a
         >.
     </p>
