--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -82,21 +82,21 @@ import MemorialTributesMockup from "../assets/img/mockup-memorial-tributes.png";
                     <p class="text-lg">
                         <i class="fas fa-circle-check text-green-600"></i>
                         Invite your friends and family to view your memorials and
-                        leave a message on the guestbooks.
+                        leave messages on the guestbooks.
                     </p>
                     <p class="text-lg">
                         <i class="fas fa-circle-check text-green-600"></i>
                         Use our virtualized <a
                             href="/how-it-works/prayer-streams"
-                            class="blueLink">prayer stream</a
+                            class="blueLink">prayer streams</a
                         > and <a href="/how-it-works/tributes" class="blueLink"
-                            >tribute</a
+                            >memorial tribute</a
                         > services to decorate and honour your memorials, even when
                         you're away.
                     </p>
                     <p class="text-lg">
                         <i class="fas fa-circle-check text-green-600"></i>
-                        Link your memorials together and build family trees.
+                        Link your memorials and build family trees.
                     </p>
                 </div>
 
