--- a/src/components/pricing_table/EssentialsTier.astro
+++ b/src/components/pricing_table/EssentialsTier.astro
@@ -4,7 +4,7 @@ import PricingTableEntry from "./PricingTableEntry.astro";
 
 <PricingTableEntry
     name="Esssentials"
-    desc="Joint plots, and access to our virtual tribute service."
+    desc="Two plots, and access to our virtual tribute service."
     monthlyPrice="16.99"
     annualMonthlyPrice="14.00"
     baseColor="amber"
