--- a/src/pages/examples/index.astro
+++ b/src/pages/examples/index.astro
@@ -57,7 +57,7 @@ import ExampleLinkCard from "../../components/ExampleLinkCard.astro";
     </div>
 
     <!-- FOR THOSE WHO MOVED ON -->
-    <h2 class="text-xl font-semibold">For those that have moved on</h2>
+    <h2 class="text-xl font-semibold">For those who have moved on</h2>
     <div class="flex flex-col lg:grid lg:grid-cols-2 gap-4">
         <ExampleLinkCard
             title="For Relatives"
