Change references of waitlist to link to app

--- a/src/components/StickyNav.astro
+++ b/src/components/StickyNav.astro
@@ -62,9 +62,9 @@ import DTOSLogo from "../assets/img/dtos-logo-h.png";
         > -->
 
         <a
-            href="/waitlist"
+            href="https://app.petapetual.com"
             class="bg-stone-800 text-stone-200 rounded px-4 py-2 hover:bg-stone-600"
-            >Join the waitlist <i class="fas fa-arrow-right"></i></a
+            >Go to app <i class="fas fa-arrow-right"></i></a
         >
     </div>
 </nav>
