--- a/src/components/pricing_table/PricingTableEntry.astro
+++ b/src/components/pricing_table/PricingTableEntry.astro
@@ -66,7 +66,7 @@ const specialShadowClass = `${isSpecial ? "shadow " + specialShadowColor : "shad
 
             <a
                 class={`text-center p-2 rounded ${getStartedButtonClass} border`}
-                href="/waitlist"
+                href="https://app.petapetual.com"
                 >Get Started <i class="fas fa-arrow-right"></i></a
             >
         </div>
