--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -114,9 +114,9 @@ import MemorialTributesMockup from "../assets/img/mockup-memorial-tributes.png";
                     </a>
 
                     <a
-                        href="/waitlist"
+                        href="https://app.petapetual.com"
                         class="p-2 text-center bg-stone-800 text-stone-200 rounded"
-                        >Join the waitlist <i class="fas fa-arrow-right"></i></a
+                        >Go to app <i class="fas fa-arrow-right"></i></a
                     >
                 </div>
             </div>
