--- a/src/layouts/MasterLayout.astro
+++ b/src/layouts/MasterLayout.astro
@@ -6,10 +6,21 @@ import Footer from "../components/Footer.astro";
 import "../styles/global.css";
 
 const { title, description } = Astro.props;
+const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 ---
 
 <html lang="en" class="text-stone-800 bg-stone-100 font-light">
     <head>
+        <!-- Schema to map Petapetual as a name for the URL Petapetual -->
+        <script type="application/ld+json">
+            {
+                "@context": "https://schema.org",
+                "@type": "WebSite",
+                "name": "Petapetual",
+                "url": "https://petapetual.com/"
+            }
+        </script>
+
         <!-- Google tag (gtag.js) -->
         <script
             async
@@ -29,6 +40,7 @@ const { title, description } = Astro.props;
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="generator" content={Astro.generator} />
         <meta name="description" content={description} />
+        <link rel="canonical" />
 
         <!-- sitemap -->
         <link rel="sitemap" href="/sitemap-index.xml" />
