--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -53,15 +53,16 @@ import MemorialTributesMockup from "../assets/img/mockup-memorial-tributes.png";
         <section class="flex flex-col gap-4 p-4 lg:grid lg:grid-cols-3 lg:m-16">
             <div class="col-span-2 flex flex-col gap-2">
                 <h1 class="text-3xl font-bold col-start-1">
-                    Digital memorials that bring tradition into the modern world
+                    Petapetual: Digital memorials that bring tradition into the
+                    modern world
                 </h1>
 
                 <h2 class="text-xl col-start-1">
-                    Use our <a
+                    Petapetual is an <a
                         href="/how-it-works/online-memorials"
-                        class="blueLink">online memorial services</a
-                    > to honour and pay respects to your late loved ones anytime,
-                    anywhere.
+                        class="blueLink">online memorial service</a
+                    > that lets you honour and pay respects to your late loved ones
+                    anytime, anywhere.
                 </h2>
 
                 <div class="h-10/12 lg:hidden flex">
