Add aria stuff to petapetual logo for easier SEO with google

--- a/src/components/Petapetual.astro
+++ b/src/components/Petapetual.astro
@@ -3,7 +3,7 @@
 ---
 
 <span class="font-extralight">
-    <a href="/">
-        peta<span class="font-semibold">petual</span>
+    <a href="/" aria-label="Petapetual">
+        peta<span aria-hidden="true" class="font-semibold">petual</span>
     </a>
 </span>
